--- a/src/components/Folder/styles.module.css
+++ b/src/components/Folder/styles.module.css
@@ -1,15 +1,12 @@
 
-.c{
-    
+.bannerfundo{
     display: flex;
-    justify-content: space-evenly;
     align-items:center;
-    flex-direction: column;
     width: 100%;
-    height: 47rem;
-    background-size: cover;
+    height: 750px;
+
 }
-.b{
+.imagemcirculo{
     position: absolute;
     top: 10%;
     justify-content:right;
